--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,69 @@
         app:layout_constraintStart_toEndOf="@id/tw_comment"
         app:layout_constraintTop_toBottomOf="@id/editText_username"/>
 
+    <TextView
+        android:id="@+id/tw_textToSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tw_searchText"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout_TextField"
+        app:layout_constraintBottom_toBottomOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <EditText
+        android:id="@+id/editText_textToSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_textToSearch"
+        android:textSize="@dimen/editText_size"
+        app:layout_constraintStart_toEndOf="@id/tw_textToSearch"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_TextField"
+        android:layout_marginTop="185dp"
+        android:layout_marginLeft="5dp"/>
+
+    <TextView
+        android:id="@+id/tw_dateToSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tw_searchDate"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tw_textToSearch"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <EditText
+        android:id="@+id/editText_dateToSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_dateToSearch"
+        android:textSize="@dimen/editText_size"
+        android:layout_marginTop="225dp"
+        android:layout_marginLeft="6dp"
+        app:layout_constraintStart_toEndOf="@id/tw_dateToSearch"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_TextField"
+        android:inputType="date"/>
+
+    <TextView
+        android:id="@+id/tw_searchResultText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tw_searchResult"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tw_dateToSearch"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tw_searchResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tw_searchResultText"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     <Button
         android:id="@+id/button_submit"
         android:layout_width="wrap_content"
@@ -80,12 +143,16 @@
         android:layout_marginLeft="95dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/editText_comment"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
-
-
-
-
+    <Button
+        android:id="@+id/button_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_search"
+        android:layout_marginLeft="118dp"
+        android:layout_marginTop="225dp"
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout_TextField"
+        app:layout_constraintStart_toEndOf="@id/tw_dateToSearch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
